<resources>
    <string name="app_name">E-Commerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ora">Ora</string>
    <string name="cle">cle</string>
    <string name="register">REGISTER</string>
    <string name="create_new_account">Create New Account</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="Enter_password">Enter Password</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="log_in">Log in</string>
    <string name="already_have_an_account">Already have an account </string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account">Don\'t have an account </string>
    <string name="register_here">Register here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="next">NEXT</string>
    <string name="finish">Finish</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="sell">Sell</string>
    <string name="profile">profile</string>
    <string name="best_cars">Best Cars</string>
    <string name="perfect_choice">Perfect choice!</string>
    <string name="buy">Buy</string>
    <string name="buy_now">Buy Now</string>
    <string name="description">Description</string>
    <string name="specifications">Specifications</string>
    <string name="type">Type</string>
    <string name="state">State</string>
    <string name="condition">Condition</string>
    <string name="color">Color</string>
    <string name="town">State</string>
    <string name="yrOfManufacturing">Year of Manufacturing</string>
    <string name="location">Location</string>
    <string name="by">by</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="message_seller">MESSAGE SELLER</string>
    <string name="call_Seller">CALL</string>
    <string name="report_abuse">Report Abuse</string>
    <string name="view_similar_ads">Similar Cars</string>
    <string name="follow">Follow</string>
    <string name="call">Call</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="user_image">user_image</string>
    <string name="favorites">Favorites</string>
    <string name="year_of_manufacturing">Year of Manufacturing *</string>
    <string name="enter_address_or_location">Enter Address or location*</string>
    <string name="enter_description">Enter description *</string>
    <string name="add_5_photos">Add photos</string>
    <string name="add_photo">Add Photo</string>
    <string name="first_picture_is_the_title_picture">First Picture is the title picture</string>
    <string name="supported_formats">Supported formats are .jpg, .gif, and .png. Each picture must not exceed 5Mb</string>
    <string name="post_ad">Post Ad</string>
    <string name="notice_on_posting_ad">By clicking on Post Ad, you accept the Terms of use. Your email, phone number and name will be gotten from your profile details</string>
    <string name="enter_amount_in">Enter price</string>
    <string name="previous">PREVIOUS</string>
    <string name="see_seller">See Seller</string>
    <string name="download">Download</string>
    <string name="contact_details">Contact details</string>
    <string name="notifications">Notifications</string>
    <string name="my_adverts">My Adverts</string>
    <string name="feedback">Feedback</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="retry">Retry</string>
    <string name="edit_contacts">Edit Contacts</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="number">Number</string>
    <string name="business_address">Business Address</string>
    <string name="save">SAVE</string>
    <string name="name">Full Name</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="business_address_optional">Business Address (optional)</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="new_email">Enter New Email</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="message">Message</string>
    <string name="sad">Sad</string>
    <string name="neutral">Neutral</string>
    <string name="happy">Happy</string>
    <string name="write_a_detailed_feedback">Write a detailed Feedback*</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="write_feedback">Write Feedback</string>
    <string name="why_do_you_want_to_report_an_abuse">Why do you want to report an abuse?</string>
    <string name="report">REPORT</string>
    <string name="describe_your_issue">Describe your issue...</string>
    <string name="view_all">view all</string>
    <string name="post_ad_like_this">Post ad like this</string>
    <string name="similar_ads">Similar Ads</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="messages">Messages</string>
    <string name="select_the_brand">Select the brand</string>
    <string name="how_was_your_experience">How was your experience?</string>
    <string name="delete_product">Delete Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="product_details">Product Details</string>
    <string name="update">Update</string>
    <string name="price_ngn">Price NGN</string>
    <string name="min_500000">Min 500000</string>
    <string name="show_adverts">SHOW ADVERTS</string>
    <string name="max_500000000">Max 5000000</string>
    <string name="log_out">Log out</string>
    <string name="default_notification_channel_id">NOTIFICATION_CHANNEL_ID</string>
    <string name="view">Details</string>
    <string name="write_feedback_error">You cannot write a feedback on your product</string>
    <string-array name="sorts">
        <item>Newest</item>
        <item>Cheapest First</item>
        <item>Expensive First</item>
    </string-array>

    <string-array name="choose_report">
        <item>Choose report reasons…</item>
        <item>This is illegal</item>
        <item>The ad is spam</item>
        <item>The price is wrong</item>
        <item>Seller asked for prepayment</item>
        <item>User is Unreachable</item>
        <item>Wrong Category</item>
        <item>Other</item>
    </string-array>
    <string-array name="how_it_was">
        <item>How it was*</item>
        <item>Successful Purchase</item>
        <item>Failed Deal</item>
        <item>Didn`t come to a deal</item>
        <item>Can`t reach the seller</item>
    </string-array>

    <string-array name="car_colors">
        <item>Colors *</item>
        <item>Black</item>
        <item>Silver</item>
        <item>Gray</item>
        <item>White</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Beige</item>
        <item>Gold</item>
        <item>Green</item>
        <item>Burgandy</item>
        <item>Ivory</item>
        <item>Matt Black</item>
        <item>Off White</item>
        <item>Orange</item>
        <item>Pearl</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Teal</item>
        <item>Yellow</item>
        <item>Others</item>
    </string-array>

    <string-array name="car_rating">
        <item>Rating *</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="car_state">
        <item>Car State *</item>
        <item>Available</item>
        <item>Auction</item>
        <item>Sold</item>
    </string-array>

    <string-array name="car_condition">
        <item>Car Condition *</item>
        <item>Brand New</item>
        <item>Foreign used</item>
        <item>Local used</item>
        <item>Other</item>
    </string-array>

    <string-array name="car_town">
        <item>Region *</item>
        <item>Aba</item>
        <item>Umuahia</item>
        <item>Arochukwu</item>
        <item>Abakaliki</item>
        <item>Abeokuta</item>
        <item>Abonnema</item>
        <item>Abuja</item>
        <item>Ado Ekiti</item>
        <item>Afikpo</item>
        <item>Akpawfu</item>
        <item>Akure</item>
        <item>Asaba</item>
        <item>Awgu</item>
        <item>Awka</item>
        <item>Bauchi</item>
        <item>Batagarawa</item>
        <item>Benin City</item>
        <item>Bida</item>
        <item>Birnin Kebbi</item>
        <item>Buguma</item>
        <item>Calabar</item>
        <item>Damaturu</item>
        <item>Dutse</item>
        <item>Ede</item>
        <item>Eket</item>
        <item>Enugu</item>
        <item>Gombe</item>
        <item>Gusau</item>
        <item>Ibadan</item>
        <item>Ife</item>
        <item>Ikeja</item>
        <item>Ikirun</item>
        <item>Ikot-Abasi</item>
        <item>Ikot Ekpene</item>
        <item>Ilorin</item>
        <item>Iwo</item>
        <item>Jalingo</item>
        <item>Jebba</item>
        <item>Jimeta</item>
        <item>Jos</item>
        <item>Kabba</item>
        <item>Kaduna</item>
        <item>Kano</item>
        <item>Katsina</item>
        <item>Karu</item>
        <item>Kontagora</item>
        <item>Kutigi</item>
        <item>Kumariya</item>
        <item>Lafia</item>
        <item>Lagos</item>
        <item>Lekki</item>
        <item>Lokoja</item>
        <item>Maiduguri</item>
        <item>Makurdi</item>
        <item>Minna</item>
        <item>Nnewi</item>
        <item>Nsukka</item>
        <item>Offa</item>
        <item>Ogbomoso</item>
        <item>Onitsha</item>
        <item>Okene</item>
        <item>Ogaminana</item>
        <item>Omu-Aran</item>
        <item>Ondo City</item>
        <item>Oron</item>
        <item>Oshogbo</item>
        <item>Owerri</item>
        <item>Owo</item>
        <item>Orlu</item>
        <item>Oyo</item>
        <item>Port Harcourt</item>
        <item>Potiskum</item>
        <item>Sokoto</item>
        <item>Suleja</item>
        <item>Umuahia</item>
        <item>Uyo</item>
        <item>Warri</item>
        <item>Wukari</item>
        <item>Yenagoa</item>
        <item>Yola</item>
        <item>Zaria</item>
    </string-array>
</resources>