<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".product_ui.PictureFragment">

    <ImageSwitcher
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:src="@drawable/car"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/margin_50"
        android:layout_height="@dimen/margin_50"
        android:layout_marginStart="16dp"
        android:id="@+id/prev"
        android:src="@drawable/ic_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/previous" />

    <ImageView
        android:layout_width="@dimen/margin_50"
        android:layout_height="@dimen/margin_50"
        android:layout_marginEnd="16dp"
        android:id="@+id/next"
        android:src="@drawable/ic_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        android:contentDescription="@string/next" />

    <ImageView
        android:id="@+id/download"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_baseline_arrow_downward_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/download" />
</androidx.constraintlayout.widget.ConstraintLayout>