<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.maricoolsapps.e_commerce.ui.user_authentication_ui.LoginViewModel" />

        <variable
            name="fragment"
            type="com.maricoolsapps.e_commerce.ui.user_authentication_ui.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.user_authentication_ui.LoginFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/very_high_margin_oracle"
            android:text="@string/ora"
            android:textColor="@color/blue"
            android:textSize="@dimen/oracle_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.556"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/highest_margin_oracle"
            android:text="@string/cle"
            android:textColor="@color/blue"
            android:textSize="@dimen/oracle_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/filter_size"
            android:background="@drawable/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_field"
            android:layout_width="0dp"
            app:errorTextColor="@color/pink2"
            app:boxBackgroundColor="@color/white"
            app:boxBackgroundMode="filled"
            app:endIconTint="@color/pink2"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.email}"
                android:layout_margin="@dimen/margin_large"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            app:boxBackgroundColor="@color/white"
            app:errorTextColor="@color/pink2"
            app:boxBackgroundMode="filled"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_field"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:text="@={viewModel.password}"
                android:hint="@string/Enter_password"
                android:inputType="textPassword"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/blue" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in"
            android:layout_width="0dp"
            android:layout_height="@dimen/filter_size"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/pink"
            android:onClick="@{() -> viewModel.userLogin()}"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="@+id/password_field"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/password_field"
            app:layout_constraintTop_toBottomOf="@+id/password_field" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/progress_bar"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="@dimen/progress_bar_width"
            android:layout_height="@dimen/progress_bar_height"
            android:layout_marginTop="@dimen/margin_medium"
            android:visibility="@{viewModel.defaultRepo.dataLoading ? View.VISIBLE : View.GONE}"
            app:SpinKit_Color="@color/pink2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.53"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgot_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:onClick="@{() -> viewModel.forgotPassword()}"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/forgot_password"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintStart_toStartOf="@+id/sign_in"
            app:layout_constraintTop_toBottomOf="@+id/sign_in" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dont_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="@id/view"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/register_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_very_small"
            android:text="@string/register_here"
            android:textColor="@color/white"
            android:onClick="@{() -> fragment.navigateToRegister()}"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/dont_have_an_account"
            app:layout_constraintStart_toEndOf="@+id/dont_have_an_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>