<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user_authentication_ui.RegisterFragment">

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/create_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_large"
      android:text="@string/create_new_account"
      android:textColor="@color/black"
      android:textSize="@dimen/text_size_large"
      android:textStyle="normal|bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <View
      android:id="@+id/view"
      android:layout_width="wrap_content"
      android:layout_height="@dimen/spinner_height"
      android:background="@drawable/blue"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/user_image"
      android:layout_width="@dimen/image_normal_size"
      android:layout_height="@dimen/image_normal_size"
      android:layout_marginTop="40dp"
      android:src="@drawable/ic_account"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/create_text" />

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/camera"
      android:layout_width="@dimen/camera_size"
      android:layout_height="@dimen/camera_size"
      android:src="@drawable/ic_photo_camera"
      app:layout_constraintBottom_toBottomOf="@+id/user_image"
      app:layout_constraintEnd_toEndOf="@+id/user_image" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/username_field"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_medium"
      android:layout_marginEnd="@dimen/margin_medium"
      app:boxBackgroundColor="@color/white"
      app:boxBackgroundMode="outline"
      app:errorTextColor="@color/pink2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/user_image">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="text" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/_number"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_medium"
      android:layout_marginTop="@dimen/margin_very_small"
      android:layout_marginEnd="@dimen/margin_medium"
      app:boxBackgroundColor="@color/white"
      app:boxBackgroundMode="outline"
      app:errorTextColor="@color/pink2"
      app:layout_constraintEnd_toEndOf="@+id/username_field"
      app:layout_constraintStart_toStartOf="@+id/username_field"
      app:layout_constraintTop_toBottomOf="@+id/username_field">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/number"
        android:inputType="number" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/_location"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_medium"
      android:layout_marginTop="@dimen/margin_very_small"
      android:layout_marginEnd="@dimen/margin_medium"
      android:layout_marginBottom="@dimen/margin_large"
      app:boxBackgroundColor="@color/white"
      app:boxBackgroundMode="outline"
      app:errorTextColor="@color/pink2"
      app:layout_constraintEnd_toEndOf="@+id/_number"
      app:layout_constraintStart_toStartOf="@+id/_number"
      app:layout_constraintTop_toBottomOf="@+id/_number">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/business_address_optional"
        android:inputType="text" />
  </com.google.android.material.textfield.TextInputLayout>

  <androidx.appcompat.widget.AppCompatSpinner
      android:id="@+id/regions"
      style="@style/ThemeOverlay.AppCompat.Light"
      android:layout_width="match_parent"
      android:layout_height="@dimen/spinner_height"
      android:layout_marginStart="@dimen/margin_medium"
      android:layout_marginTop="@dimen/margin_large"
      android:layout_marginEnd="@dimen/margin_medium"
      android:background="@drawable/border_black"
      android:backgroundTintMode="src_in"
      android:entries="@array/car_town"
      android:pointerIcon="arrow"
      android:spinnerMode="dialog"
      app:barrierDirection="right"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/_location"
      tools:targetApi="n" />


  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/email_field"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_medium"
      android:layout_marginTop="@dimen/margin_large"
      android:layout_marginEnd="@dimen/margin_medium"
      android:visibility="gone"
      app:boxBackgroundColor="@color/white"
      app:boxBackgroundMode="filled"
      app:errorTextColor="@color/pink2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/create_text"
      tools:visibility="gone">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />
  </com.google.android.material.textfield.TextInputLayout>


  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/password_field"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_medium"
      android:layout_marginEnd="@dimen/margin_medium"
      android:visibility="gone"
      app:boxBackgroundColor="@color/white"
      app:boxBackgroundMode="filled"
      app:errorTextColor="@color/pink2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/email_field"
      app:passwordToggleEnabled="true"
      app:passwordToggleTint="@color/black"
      tools:visibility="gone">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:hint="@string/Enter_password"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black" />
  </com.google.android.material.textfield.TextInputLayout>


  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/reenter_password_field"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_medium"
      android:layout_marginEnd="@dimen/margin_medium"
      android:visibility="gone"
      app:boxBackgroundColor="@color/white"
      app:boxBackgroundMode="filled"
      app:errorTextColor="@color/pink2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password_field"
      app:passwordToggleEnabled="true"
      app:passwordToggleTint="@color/black"
      tools:visibility="gone">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/reenter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:hint="@string/reenter_password"
        android:inputType="textPassword" />
  </com.google.android.material.textfield.TextInputLayout>

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/next"
      android:layout_width="@dimen/image_size_small"
      android:layout_height="@dimen/image_size_small"
      android:layout_marginTop="@dimen/margin_medium"
      android:contentDescription="@string/next"
      android:src="@drawable/ic_next"
      android:visibility="gone"
      app:layout_constraintEnd_toEndOf="@+id/reenter_password_field"
      app:layout_constraintTop_toBottomOf="@+id/reenter_password_field"
      tools:visibility="gone" />

  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/finish"
      android:layout_width="@dimen/button_width"
      android:layout_height="@dimen/button_height"
      android:layout_marginTop="@dimen/margin_medium"
      android:layout_marginEnd="@dimen/margin_large"
      android:background="@drawable/pink"
      android:text="@string/finish"
      android:textColor="@color/white"
      android:textSize="@dimen/text_size_large"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/regions" />

  <com.github.ybq.android.spinkit.SpinKitView
      android:id="@+id/progress_bar"
      style="@style/SpinKitView.Large.Circle"
      android:layout_width="@dimen/margin_large"
      android:layout_height="@dimen/margin_large"
      android:layout_marginTop="@dimen/margin_medium"
      android:visibility="gone"
      app:SpinKit_Color="@color/pink2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.53"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/finish" />

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/already_have_an_account"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_large"
      android:text="@string/already_have_an_account"
      android:textColor="@color/white"
      android:textSize="@dimen/text_size_normal"
      app:layout_constraintBottom_toBottomOf="@+id/view"
      app:layout_constraintStart_toStartOf="@id/view"
      app:layout_constraintTop_toTopOf="@+id/view" />

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/log_in"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_very_small"
      android:text="@string/log_in"
      android:textColor="@color/white"
      android:textSize="@dimen/text_size_normal"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/already_have_an_account"
      app:layout_constraintStart_toEndOf="@+id/already_have_an_account" />

  <androidx.constraintlayout.widget.Group
      android:id="@+id/first_half"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      app:constraint_referenced_ids="email_field,next,password_field,reenter_password_field" />

  <androidx.constraintlayout.widget.Group
      android:id="@+id/second_half"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:constraint_referenced_ids="regions,username_field,user_image,_location,camera,_number,finish" />
</androidx.constraintlayout.widget.ConstraintLayout>